force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <label>Invoice Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>