force-app/main/default/objects/Invoice_Line_Item__c/fields/Xero_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Xero_Account_Code__c</fullName>
    <label>Xero Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>